# weather-in-terminal

./: .gitignore  Makefile  README.md  pyproject.toml
weather_in_terminal/: weatherapp.py
