[tool.poetry]
name = "weather-in-terminal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "weather_in_terminal"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
